[gd_scene load_steps=3 format=3 uid="uid://cy2uj4lwelppk"]

[ext_resource type="Script" path="res://ui/combat_map_view/unit_trade/trade_container.gd" id="1_jj83a"]
[ext_resource type="PackedScene" uid="uid://1f3vadqgcqf3" path="res://ui/combat_map_view/unit_trade/trade_unit_inventory.tscn" id="1_n474w"]

[node name="TradeContainer" type="Control"]
custom_minimum_size = Vector2(610, 275)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -305.0
offset_top = -137.5
offset_right = 305.0
offset_bottom = 137.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jj83a")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 610.0
offset_bottom = 275.0

[node name="TradeUnitInventorya" parent="HBoxContainer" instance=ExtResource("1_n474w")]
layout_mode = 2

[node name="TradeUnitInventoryb" parent="HBoxContainer" instance=ExtResource("1_n474w")]
layout_mode = 2
